<resources>
    <string name="username">Aadhar number</string>
    <string name="app_name">eMandi</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="rememberme">Remember me</string>
    <string name="AadharCard">Aadhaar Number</string>
    <string name="or"> or </string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="login_with_number">Login with Phone_number</string>
    <string name="submit">Submit</string>
    <string name="otp">Enter OTP</string>
    <string name="title_home">Home</string>
    <string name="title_buy">Buy</string>
    <string name="title_sell">Sell</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="api_key">579b464db66ec23bdd000001f0af90f3616349b86afb5082c578bf37</string>
    <string name="login_success">Login Successful</string>
</resources>
