<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup"
    android:background="@drawable/main_back"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etAadharCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rectangular_white"
            android:drawablePadding="12dp"
            android:layout_marginRight="16dp"
            android:padding="16dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/AadharCard"
            android:maxLines="1"
            android:textColorHint="#fff"/>

        <TextView
            android:text="@string/or"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textColor="#fff"
            android:layout_marginLeft="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPhoneNumber"
            android:hint="@string/PhoneNumber"
            android:background="@drawable/border_rectangular_white"
            android:padding="16dp"
            android:layout_marginLeft="20dp"
            android:textColorHint="#fff"
            android:maxLines="1"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnsignup"
            android:text="@string/signup"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"

            android:background="#6bc94f"
            android:padding="16dp"/>
    </LinearLayout>
</RelativeLayout>